# torden_backend

./: .justfile  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20230513084310_init.sql  20231015031146_agent_in_message_role_enum.sql  20231018091946_status_message_in_message_enum.sql  20231019151244_chat_metadata.sql
src/: api.rs  chats.rs  main.rs  middleware.rs  structs.rs  utils.rs
