[package]
name = "automata_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.32", features = ["macros", "rt-multi-thread"] }
axum = { version = "^0.6", features = ["ws", "headers", "tracing", "macros"] }
sqlx = { version = "^0.7.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "json",
] }
uuid = { version = "1.4.1", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
tower-http = { version = "0.4.4", features = ["cors", "trace", "tracing"] }
